--- a/mcl_sculk/mod.conf
+++ b/mcl_sculk/mod.conf
@@ -1,3 +1,3 @@
 name = mcl_sculk
 author = cora, Thunder1035
-depends = mcl_core, mcl_sounds, mcl_experience, walkover, mesecons
+depends = mcl_core, mcl_sounds, mcl_experience, walkover, mesecons, mesecons_mvps, mcl_buckets,
